fix: Fix highlighted text colours for releases UI in dark mode

--- a/static/sass/_snapcraft_release.scss
+++ b/static/sass/_snapcraft_release.scss
@@ -681,6 +681,14 @@
 
         &:hover {
           background-color: $color-light;
+
+          .is-dark & {
+            color: $color-x-dark;
+
+            .p-revisions-list__revision {
+              color: $color-x-dark;
+            }
+          }
         }
       }
 
@@ -856,6 +864,19 @@
   .current-change {
     background-color: $color-highlighted !important;
     border: $color-highlighted-border !important;
+
+    .is-dark & {
+      color: $color-x-dark;
+
+      .p-release-data__meta {
+        color: $color-x-dark;
+      }
+
+      // Necessary override for highlighted cells in dark mode
+      .p-icon--chevron-down {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath fill='%23000' d='M8.187 11.748l6.187-6.187-1.06-1.061-5.127 5.127L3.061 4.5 2 5.561z'/%3E%3C/svg%3E");
+      }
+    }
   }
 
   .progressive-chart-key--current::after,
